--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -546,19 +546,48 @@
                                 <rect key="frame" x="20" y="28" width="728" height="988"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="VPf-Fh-eVH">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="305" height="92"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="" id="h7q-cX-2N8" customClass="YearlyMonthView" customModule="ponomar" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CalendarImageCell" id="h7q-cX-2N8" customClass="CalendarImageCell" customModule="ponomar" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="305" height="92"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="305" height="92"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="m5k-QF-L2i">
+                                                    <rect key="frame" x="0.0" y="5" width="15" height="15"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="15" id="Lss-vy-j2u"/>
+                                                        <constraint firstAttribute="height" constant="15" id="Vkz-kE-nwW"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5JR-76-Oip">
+                                                    <rect key="frame" x="25" y="5" width="280" height="16"/>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
                                         </view>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstItem="5JR-76-Oip" firstAttribute="leading" secondItem="m5k-QF-L2i" secondAttribute="trailing" priority="999" constant="10" id="1KK-fm-Qfg"/>
+                                            <constraint firstItem="5JR-76-Oip" firstAttribute="top" secondItem="h7q-cX-2N8" secondAttribute="top" priority="999" constant="5" id="NHs-bU-FcH"/>
+                                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="5JR-76-Oip" secondAttribute="bottom" priority="999" id="cL1-dn-mBQ"/>
+                                            <constraint firstAttribute="trailing" secondItem="5JR-76-Oip" secondAttribute="trailing" priority="999" id="eHK-PW-QpQ"/>
+                                            <constraint firstItem="m5k-QF-L2i" firstAttribute="top" secondItem="h7q-cX-2N8" secondAttribute="top" constant="5" id="kJp-I0-7co"/>
+                                            <constraint firstItem="m5k-QF-L2i" firstAttribute="leading" secondItem="h7q-cX-2N8" secondAttribute="leading" id="x2s-gS-9TC"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="m5k-QF-L2i" id="0m5-li-oyo"/>
+                                            <outlet property="textLabel" destination="5JR-76-Oip" id="pgl-KW-iRc"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
