--- a/prayerbook/Main.storyboard
+++ b/prayerbook/Main.storyboard
@@ -261,8 +261,7 @@
         <!--MainVC-->
         <scene sceneID="Zs1-97-Vp3">
             <objects>
-                <tabBarController storyboardIdentifier="Initial" definesPresentationContext="YES" id="G5G-CB-Hhd" customClass="MainVC" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
-                    <nil key="simulatedBottomBarMetrics"/>
+                <tabBarController storyboardIdentifier="Initial" id="G5G-CB-Hhd" customClass="MainVC" customModule="ponomar" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="xRW-dh-1Of">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -640,7 +639,7 @@
                                                     </collectionViewFlowLayout>
                                                     <cells>
                                                         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCellId" id="am5-OD-e07" customClass="CollectionViewCell" customModule="ponomar" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="5" width="110" height="110"/>
+                                                            <rect key="frame" x="0.0" y="-5" width="110" height="110"/>
                                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                                                 <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
